--- a/SolarThermalSystem/Base.lproj/Main.storyboard
+++ b/SolarThermalSystem/Base.lproj/Main.storyboard
@@ -3,27 +3,9 @@
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Solar Thermal System-->
-        <scene sceneID="uHV-B8-Ra1">
-            <objects>
-                <viewController id="Nes-fx-wKm" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="PpP-hZ-hUR">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="mjT-6S-sWn"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    </view>
-                    <navigationItem key="navigationItem" title="Solar Thermal System" id="IwU-Xt-TTf"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="AwX-nQ-OwB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-431" y="1282"/>
-        </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="G7s-o4-6HV">
             <objects>
@@ -34,81 +16,33 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="leF-rh-InD" kind="relationship" relationship="viewControllers" id="86r-Sq-3V4"/>
-                        <segue destination="q7g-vX-aRc" kind="relationship" relationship="viewControllers" id="P5e-5r-gGi"/>
+                        <segue destination="d9X-Hz-a33" kind="relationship" relationship="viewControllers" id="86r-Sq-3V4"/>
+                        <segue destination="N51-u9-Nm6" kind="relationship" relationship="viewControllers" id="P5e-5r-gGi"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6f7-Qq-PpH" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="266" y="-146"/>
         </scene>
-        <!--Resources-->
-        <scene sceneID="6YC-wN-lXK">
+        <!--FormulaResources-->
+        <scene sceneID="RBq-kU-K6o">
             <objects>
-                <viewController id="gwg-J0-i1Q" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="XVS-OE-3Op">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="nSF-yZ-jUc">
-                                <rect key="frame" x="76" y="147" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                            </tableView>
-                        </subviews>
-                        <viewLayoutGuide key="safeArea" id="1vr-pa-BSP"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    </view>
-                    <navigationItem key="navigationItem" title="Resources" id="3IW-p9-34q"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dm4-sH-soY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="934" y="1282"/>
-        </scene>
-        <!--Resources-->
-        <scene sceneID="b5K-w4-AWI">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="q7g-vX-aRc" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Resources" image="gearshape.fill" catalog="system" id="FeW-Z1-Wza"/>
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="9aV-Zg-8b6">
-                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="gwg-J0-i1Q" kind="relationship" relationship="rootViewController" id="gM7-sG-O9t"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="vcO-eY-lS2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <viewControllerPlaceholder storyboardName="FormulaResources" id="N51-u9-Nm6" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="zbz-QB-vEq"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rIp-Qc-qn3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="935" y="542"/>
         </scene>
         <!--Simulator-->
-        <scene sceneID="8so-Sh-Fhs">
+        <scene sceneID="cql-Va-Fw2">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="leF-rh-InD" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Simulator" image="sun.and.horizon.fill" catalog="system" id="Xk1-zt-kgZ"/>
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="hml-Kc-aDa">
-                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="Nes-fx-wKm" kind="relationship" relationship="rootViewController" id="I9U-hd-hY4"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="9an-N7-0S1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <viewControllerPlaceholder storyboardName="Simulator" id="d9X-Hz-a33" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="mTE-zp-Pp5"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ab7-D1-1dn" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-431.29770992366412" y="542.95774647887322"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="gearshape.fill" catalog="system" width="128" height="123"/>
-        <image name="sun.and.horizon.fill" catalog="system" width="128" height="79"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-    </resources>
 </document>
