stuck with 2D arrays, all popup buttons now populate with data. Some use slicing syntax to display correct data because the 2D arrays are laid out in a way that will descriptively display data on resources page as well. All popup buttons also assign values to the global properties that make up the terms in the final simulation formulas

--- a/SolarThermalSystem/Simulator/Simulator.storyboard
+++ b/SolarThermalSystem/Simulator/Simulator.storyboard
@@ -77,6 +77,9 @@
                                                                 </menu>
                                                                 <state key="normal" image="chevron.compact.down" catalog="system"/>
                                                                 <buttonConfiguration key="configuration" style="tinted"/>
+                                                                <connections>
+                                                                    <action selector="panelTypeChanged:" destination="Nes-fx-wKm" eventType="touchUpInside" id="32X-EY-kPR"/>
+                                                                </connections>
                                                             </button>
                                                         </subviews>
                                                         <constraints>
@@ -103,6 +106,9 @@
                                                                 </menu>
                                                                 <state key="normal" image="chevron.compact.down" catalog="system"/>
                                                                 <buttonConfiguration key="configuration" style="tinted"/>
+                                                                <connections>
+                                                                    <action selector="tiltChanged:" destination="Nes-fx-wKm" eventType="touchUpInside" id="sfB-tT-wZp"/>
+                                                                </connections>
                                                             </button>
                                                         </subviews>
                                                         <constraints>
@@ -129,6 +135,9 @@
                                                                 </menu>
                                                                 <state key="normal" image="chevron.compact.down" catalog="system"/>
                                                                 <buttonConfiguration key="configuration" style="tinted"/>
+                                                                <connections>
+                                                                    <action selector="orientationChanged:" destination="Nes-fx-wKm" eventType="touchUpInside" id="Qhk-n7-qsy"/>
+                                                                </connections>
                                                             </button>
                                                         </subviews>
                                                         <constraints>
@@ -257,6 +266,9 @@
                                                                 </menu>
                                                                 <state key="normal" image="chevron.compact.down" catalog="system"/>
                                                                 <buttonConfiguration key="configuration" style="tinted"/>
+                                                                <connections>
+                                                                    <action selector="overshadingChanged:" destination="Nes-fx-wKm" eventType="touchUpInside" id="7I7-Hu-xwO"/>
+                                                                </connections>
                                                             </button>
                                                         </subviews>
                                                         <constraints>
@@ -375,6 +387,9 @@
                                                 <color key="tintColor" red="0.80000000000000004" green="0.16078431369999999" blue="0.047058823530000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="tinted" image="sun.and.horizon.fill" catalog="system" title="Run Simulation"/>
+                                                <connections>
+                                                    <action selector="runSimulationTapped:" destination="Nes-fx-wKm" eventType="touchUpInside" id="6DB-Pg-Mhj"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -510,7 +525,6 @@
                         <outlet property="collectorWidthTextField" destination="G0Z-gU-Cjk" id="Zh2-gf-I5c"/>
                         <outlet property="hotWaterDemandTextField" destination="RwF-S5-e6f" id="VV0-cf-paM"/>
                         <outlet property="overshadingPopupButton" destination="w8z-YZ-Mtn" id="zXr-7a-W2G"/>
-                        <outlet property="runSimulationButton" destination="XVC-AB-XR5" id="pZM-jL-MuC"/>
                         <outlet property="systemImageView" destination="70C-8x-IMp" id="Gph-sa-BoK"/>
                         <outlet property="tankVolumeTextField" destination="7dO-rt-lrl" id="hz7-hv-nHZ"/>
                     </connections>
